--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@angular/router": "^5.0.0",
     "@swimlane/ngx-charts": "^7.0.1",
     "angular2-highcharts": "^0.5.5",
+    "better-sqlite3": "^4.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ds18b20": "^0.1.0",
     "express": "^4.16.2",
     "ng2-charts": "^1.6.0",
+    "nodemailer": "^4.4.0",
     "pg": "^7.4.0",
     "pg-promise": "^7.3.2",
     "rxjs": "^5.5.2",
