--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.16.2",
     "ng2-charts": "^1.6.0",
     "nodemailer": "^4.4.0",
+    "onoff": "^1.1.8",
     "pg": "^7.4.0",
     "pg-promise": "^7.3.2",
     "rxjs": "^5.5.2",
