--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ds18b20": "^0.1.0",
     "express": "^4.16.2",
     "ng2-charts": "^1.6.0",
+    "node-schedule": "^1.2.5",
     "nodemailer": "^4.4.0",
     "onoff": "^1.1.8",
     "pg": "^7.4.0",
