--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^5.0.0",
     "@swimlane/ngx-charts": "^7.0.1",
     "angular2-highcharts": "^0.5.5",
+    "axios": "^0.17.1",
     "better-sqlite3": "^4.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
@@ -36,8 +37,6 @@
     "node-schedule": "^1.2.5",
     "nodemailer": "^4.4.0",
     "onoff": "^1.1.8",
-    "pg": "^7.4.0",
-    "pg-promise": "^7.3.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -46,16 +45,6 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.2.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
