--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-schedule": "^1.2.5",
     "nodemailer": "^4.4.0",
     "onoff": "^1.1.8",
+    "rpi-433": "^2.1.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
