--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@swimlane/ngx-charts": "^7.0.1",
     "angular2-highcharts": "^0.5.5",
     "axios": "^0.17.1",
-    "better-sqlite3": "^4.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
@@ -39,6 +38,7 @@
     "onoff": "^1.1.8",
     "rpi-433": "^2.1.0",
     "rxjs": "^5.5.2",
+    "sqlite3": "^3.1.13",
     "tplink-smarthome-api": "^0.22.0",
     "zone.js": "^0.8.14"
   },
